--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<div class="form-group">
+<div class="container form-group" style="margin-top: 70px">
+  <h1>Form validation</h1>
   <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
     <div>
       <label>
         Name:
-        <input formControlName="name" placeholder="Your name">
+        <input class="form-control" formControlName="name" placeholder="Your name">
       </label>
       <div *ngIf="myForm.get('name').invalid && (myForm.get('name').dirty || myForm.get('name').touched)">
         Please provide a name.
@@ -12,7 +13,7 @@
     <div>
       <label>
         Email:
-        <input formControlName="email" placeholder="Your email">
+        <input class="form-control" formControlName="email" placeholder="Your email">
       </label>
       <div *ngIf="myForm.get('email').invalid && (myForm.get('email').dirty || myForm.get('email').touched)">
         Please provide a valid email address.
@@ -21,12 +22,13 @@
     <div>
       <label>
         Message:
-        <input formControlName="message" placeholder="Your message">
+        <input class="form-control" formControlName="message" placeholder="Your message">
       </label>
       <div *ngIf="myForm.get('message').invalid && (myForm.get('message').dirty || myForm.get('message').touched)">
         Messages must be at least 15 characters long.
       </div>
     </div>
+    <br>
     <button type="submit" [disabled]="myForm.invalid">Send</button>
   </form>
 </div>
